--- a/src/main/resources/org/second/tetris/hello-view.fxml
+++ b/src/main/resources/org/second/tetris/hello-view.fxml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.second.tetris.HelloController">
+<VBox alignment="CENTER" prefHeight="312.0" prefWidth="222.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="org.second.tetris.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="160.0" left="20.0" right="20.0" top="20.0" />
+        <Insets bottom="140" left="20.0" right="20.0" top="20.0" />
+        <Insets bottom="120" left="20.0" right="20.0" top="20.0" />
+        <Insets bottom="100" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label fx:id="homePage" text="Logo">
+      <font>
+         <Font size="21.0" />
+      </font></Label>
+    <Button onAction="#onSinglePlayerModeClick" prefHeight="34.0" prefWidth="91.0" text="单机模式">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
+    <Button onAction="#onScoreRecordClick" prefHeight="38.0" prefWidth="91.0" text="得分记录">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
+    <Button onAction="#onGameIntroductionClick" prefHeight="32.0" prefWidth="91.0" text="游戏介绍">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
+
 </VBox>
