--- a/src/main/resources/org/second/tetris/hello-view.fxml
+++ b/src/main/resources/org/second/tetris/hello-view.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.second.tetris.controller.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.second.tetris.controller.HelloController">
    <children>
-      <Button layoutX="140.0" layoutY="133.0" mnemonicParsing="false" onAction="#onSinglePlayerModeClick" prefHeight="51.0" prefWidth="127.0" text="单机模式" />
-      <Button layoutX="140.0" layoutY="242.0" mnemonicParsing="false" onAction="#onScoreRecordClick" prefHeight="51.0" prefWidth="127.0" text="得分记录" />
-      <Button layoutX="140.0" layoutY="350.0" mnemonicParsing="false" onAction="#onGameIntroductionClick" prefHeight="51.0" prefWidth="127.0" text="游戏介绍" />
-      <Label layoutX="100.0" layoutY="73.0" prefHeight="18.0" prefWidth="205.0" fx:id="homePage">
+      <Button layoutX="587.0" layoutY="221.0" mnemonicParsing="false" onAction="#onSinglePlayerModeClick" prefHeight="51.0" prefWidth="127.0" text="单机模式" />
+      <Button layoutX="587.0" layoutY="330.0" mnemonicParsing="false" onAction="#onScoreRecordClick" prefHeight="51.0" prefWidth="127.0" text="得分记录" />
+      <Button layoutX="587.0" layoutY="438.0" mnemonicParsing="false" onAction="#onGameIntroductionClick" prefHeight="51.0" prefWidth="127.0" text="游戏介绍" />
+      <Label fx:id="homePage" alignment="CENTER" layoutX="537.0" layoutY="108.0" prefHeight="18.0" prefWidth="205.0" text="这是一条LOGO">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
    </children>
