--- a/src/main/resources/org/second/tetris/style.css
+++ b/src/main/resources/org/second/tetris/style.css
@@ -7,13 +7,12 @@
 }
 
 .button {
-    -fx-background-color:linear-gradient(to right,#00fffc,#fff600);;
+    -fx-background-color:linear-gradient(to right,#58A0E8,#0030B0);;
     -fx-background-radius:20;
     -fx-border-radius:20;
-    -fx-border-style:;
     -fx-background-insets: 5;
 }
 
 .button:hover{
-     -fx-background-color:#00E6E3;
+     -fx-background-color:#0030B0;
 }
