--- a/src/main/resources/org/second/tetris/scoreBoard-view.fxml
+++ b/src/main/resources/org/second/tetris/scoreBoard-view.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.second.tetris.controller.ScoreBoardController">
+<AnchorPane prefHeight="400.0" prefWidth="900.0" stylesheets="@tableview.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.second.tetris.controller.ScoreBoardController">
    <children>
-      <TableView layoutX="75.0" layoutY="46.0" prefHeight="200.0" prefWidth="450.0" tableMenuButtonVisible="true">
+      <TableView fx:id="tableview" layoutX="180.0" layoutY="23.0" prefHeight="564.0" prefWidth="900.0" tableMenuButtonVisible="true">
         <columns>
-          <TableColumn prefWidth="75.0" text="Score" />
-          <TableColumn prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="score" prefWidth="75.0" text="Score" />
+          <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
